# tiatoolbox

./: '  .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  =0.5.2  =1.0.3  =2.0.0  =22.3.0  =7.2.0  AUTHORS.md  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  fk j  pyproject.toml  requirements.conda.yml  requirements.dev.conda.yml  requirements.txt  requirements.win64.conda.yml  requirements.win64.dev.conda.yml  requirements_dev.txt  setup.cfg  setup.py  test.py  test_tileserver.py  tox.ini  whitelist.txt
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: conda-env-create.yml  docker-publish.yaml  docker-publish.yml  mypy-type-check.yml  notebook-urls.yml  pip-install.yml  python-package.yml
benchmarks/: annotation_nquery.ipynb  annotation_nquery.py  annotation_store.ipynb  annotation_store_alloc.py
docs/: Makefile  algorithms.md  algorithms.rst  api.rst  authors.md  basic_functionalities.rst  conf.py  contributing.md  history.md  index.md  index.rst  installation.md  installation.rst  jnb_pipelines.rst  latex_preamble.tex  license.rst  make.bat  notebooks.rst  pretrained.rst  readme.md  requirements.txt  usage.rst  usage_examples.rst  visualization.rst
docs/_templates/: custom-class-template.rst  custom-function-template.rst  custom-module-template.rst
docs/algorithms/: theory-idars.rst  theory_idars.rst
examples/: 01-wsi-reading.ipynb  01_example_wsiread.ipynb  01_wsiread.ipynb  02_example_stainnorm.ipynb  03-tissue-masking.ipynb  03_example_tissuemask.ipynb  05-patch-prediction.ipynb  05_example_patchprediction.ipynb  05_example_patchpredictor.ipynb  05_patchprediction.ipynb  07-advanced-modeling.ipynb  07_advanced_model_techniques.ipynb  07_example_modeltechniques.ipynb  07_example_mutationprediction.ipynb  07_modeltechniques.ipynb  08_example_mutationprediction.ipynb  10-wsi-registration.ipynb  10-wsi_registration.ipynb  README.md  README.rst  example_patchExtraction.ipynb  example_patchextraction.ipynb  example_patchpredictor.ipynb  example_stainnorm.ipynb  example_tissuemask.ipynb  example_wsiread.ipynb  nucleus-detection.ipynb  slide_graph.ipynb  slide_graph.py  slide_graph_ER_prediction.ipynb  slide_graph_inference.ipynb  slide_info.py  sneak_peak.ipynb  test.py  tiaviz-test.ipynb  wsi_registration.ipynb
examples/_example_docs/: notebooks_intro.rst
examples/full-pipelines/: slide-graph.ipynb
examples/inference-pipelines/: idars.ipynb  slide-graph.ipynb
examples/pipelines/: 01_idars.ipynb  01_idars_mutationprediction.ipynb  idars_mutationprediction.ipynb
pre-commit/: missing_imports.py  notebook_check_ast.py  notebook_markdown_format.py  notebook_urls.py  requirements_consistency.py
requirements/: requirements.conda.yml  requirements.dev.conda.yml  requirements.txt  requirements.win64.conda.yml  requirements.win64.dev.conda.yml  requirements_cpu.txt  requirements_dev.txt
tests/: __init__.py  conftest.py  patch_extraction_tests.py  test_aaa_nucleus_instance_segmentor.py  test_affine_zarr_view.py  test_annotation_rendering.py  test_annotation_stores.py  test_annotation_tilerendering.py  test_app_bokeh.py  test_bokeh_app.py  test_bokeh_config.py  test_bokeh_main_urls.py  test_bokeh_server.py  test_cli.py  test_data.py  test_docs.py  test_dsl.py  test_enums.py  test_exceptions.py  test_graph.py  test_graphconstruction.py  test_init.py  test_json_config_bokeh.py  test_magic.py  test_meta_ngff_dataclasses.py  test_metrics.py  test_model_segmentation.py  test_models.py  test_models_dummy.py  test_models_semantic_segmentation.py  test_multichannel_reading.py  test_notebooks.py  test_patch_extraction.py  test_postproc_defs.py  test_prealignment.py  test_predicate.py  test_pyramid.py  test_readerx.py  test_registration.py  test_requirements.py  (+19 more)
tests/data/: sample_patch_extraction-noheader.csv  sample_patch_extraction.csv  sample_patch_extraction.json  sample_patch_extraction.npy  sample_patch_extraction_2col.json  sample_patch_extraction_2col.npy  sample_patch_extraction_jp2.csv  sample_patch_extraction_jp2read.npy  sample_patch_extraction_read.npy  sample_patch_extraction_svs.csv  sample_patch_extraction_svs_header.csv  sample_patch_extraction_svsread.npy
tests/engines/: __init__.py  _test_multi_task_segmentor.py  _test_nucleus_instance_segmentor.py  _test_patch_predictor.py  _test_semantic_segmentation.py  test_engine_abc.py  test_feature_extractor.py  test_ioconfig.py  test_multi_task_segmentor.py  test_nucleus_detection_engine.py  test_nucleus_instance_segmentor.py  test_patch_classifier.py  test_patch_predictor.py  test_patch_predictor_new.py  test_semantic_segmentor.py
tests/models/: __init__.py  test_abc.py  test_arch_efficientnetunet.py  test_arch_efficientnetunet_tissue_mask_model.py  test_arch_grandqc.py  test_arch_idars.py  test_arch_kongnet.py  test_arch_mapde.py  test_arch_micronet.py  test_arch_nuclick.py  test_arch_sam.py  test_arch_sccnn.py  test_arch_timm_efficientnet.py  test_arch_unet.py  test_arch_utils.py  test_arch_vanilla.py  test_backbone_unet.py  test_backbone_utils.py  test_dataset.py  test_feature_extractor.py  test_hovernet.py  test_hovernet_plus.py  test_hovernetplus.py  test_models_abc.py  test_multi_task_segmentor.py  test_nucleus_detection_engine.py  test_nucleus_instance_segmentor.py  test_patch_predictor.py  test_prompt_segmentor.py  test_semantic_segmentation.py  test_utils.py
tests/zarrtiff/: __init__.py  tiff_fsspec.py  tileserver.py
tiatoolbox/: __init__.py  __main__.py  cli.py  enums.py  tiatoolbox.py  type_hints.py  typing.py
tiatoolbox/annotation/: __init__.py  dsl.py  predicate.py  storage.py
tiatoolbox/cli/: __init__.py  common.py  deep_feature_extractor.py  multitask_segmentor.py  nucleus_detector.py  nucleus_instance_segment.py  nuclues_detector.py  overlay_from_json.py  patch_classifier.py  patch_predictor.py  read_bounds.py  save_tiles.py  semantic_segment.py  semantic_segmentor.py  show_overlay.py  show_wsi.py  slide_info.py  slide_thumbnail.py  stain_norm.py  (+3 more)
(+202 files in other folders)
